--- a/agent-web/src/components/AdPromptInput/style.less
+++ b/agent-web/src/components/AdPromptInput/style.less
@@ -1,4 +1,4 @@
-.ad-prompt-input {
+  .ad-prompt-input {
   position: relative;
   width: 100%;
   height: 100%;
@@ -13,11 +13,11 @@
     transition: all .3s;
     padding: 8px 11px;
     border: 1px solid #d9d9d9;
-    border-radius: var(--ad-border-radius-base);
+    border-radius: var(--dip-border-radius-base);
 
     &:not(.ad-prompt-input-disabled) {
       &:hover {
-        border-color: var(--ad-primary-color-hover);
+        border-color: var(--dip-primary-color-hover);
       }
     }
 
@@ -29,61 +29,62 @@
   }
 
   &-focus {
-    border-color: var(--ad-primary-color-hover);
+    border-color: var(--dip-primary-color-hover);
   }
   &-disabled {
-    background: var(--ad-hover-bg-color);
+    background: var(--dip-hover-bg-color);
     cursor: not-allowed;
   }
 
   &-var {
-    background: rgba(0, 0, 0, 0.04);
-    border-radius: 3px;
-    //padding: 0 12px;
-    line-height: 20px;
-    height: 22px;
     display: inline-block;
-    margin: 0 4px;
-
-    &-error {
-      background: #ff4d4f;
-      color: #fff;
-      position: relative;
-
-      &:hover {
-        .ad-prompt-input-var-tip {
-          display: block;
-        }
-      }
-    }
-
-    &-tip {
-      display: none;
-      position: absolute;
-      top: 0;
-      left: 0;
-      transform: translateY(-100%);
-      background: #000;
-      color: #fff;
-    }
+    //background: rgba(0, 0, 0, 0.04);
+    //border-radius: 3px;
+    ////padding: 0 12px;
+    //line-height: 20px;
+    //height: 22px;
+    //display: inline-block;
+    //margin: 0 4px;
+    //
+    //&-error {
+    //  background: #ff4d4f;
+    //  color: #fff;
+    //  position: relative;
+    //
+    //  &:hover {
+    //    .ad-prompt-input-var-tip {
+    //      display: block;
+    //    }
+    //  }
+    //}
+    //
+    //&-tip {
+    //  display: none;
+    //  position: absolute;
+    //  top: 0;
+    //  left: 0;
+    //  transform: translateY(-100%);
+    //  background: #000;
+    //  color: #fff;
+    //}
   }
 
   &-select {
-    .ant-select-selector {
-      height: 20px !important;
+    .agent-web-select-selector {
+      height: 22px !important;
       padding: 0 !important;
 
       input {
         //height: unset !important;
-        height: 20px !important;
+        height: 22px !important;
       }
 
-      .ant-select-selection-search {
-        left: 0 !important;
-        top: -3px !important;
+      .agent-web-select-selection-search {
+        //left: 0 !important;
+        //top: -3px !important;
       }
 
-      .ant-select-selection-placeholder {
+      .agent-web-select-selection-placeholder {
         //line-height: unset;
       }
     }
@@ -107,11 +108,11 @@
 }
 
 
-.ant-form {
-  .ant-form-item {
-    &.ant-form-item-has-error {
+.agent-web-form {
+  .agent-web-form-item {
+    &.agent-web-form-item-has-error {
       .ad-prompt-input-editor {
-        border-color: var(--ad-error-color);
+        border-color: var(--dip-error-color);
       }
     }
   }
